# mutfunc

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
include/: muf.h  mutfunc.hpp
src/: lib.cpp  storage.hpp  test.cpp
